--- a/scss/recursos/_colores.scss
+++ b/scss/recursos/_colores.scss
@@ -6,4 +6,5 @@
 // Gris: rgb(243, 243, 243)
 
 
-$color-principal: rgb(165, 1, 4)
+$color-principal: rgb(165, 1, 4);
+$color-secundario: rgb(252, 186, 4)
