--- a/scss/sections/_main-index.scss
+++ b/scss/sections/_main-index.scss
@@ -2,7 +2,7 @@
 .flyer-principal {
     height: 600px;
     padding: 0;
-    background-image: url(../../img/Fondo.png);
+    background-image: url(../img/Fondo.png);
     background-size: 100% 100%;
     display: flex;
     justify-content: center;
